# primitive_obj_loader

./: .gitignore  CMakeLists.txt  main.cpp  obj_loader.h
assets/: box.obj.model  bunny.obj.model
